added owner data to the project pages

--- a/web/templates/pages/project_detail.html
+++ b/web/templates/pages/project_detail.html
@@ -30,6 +30,7 @@
 				{% if project.website_test %}
 					<p><strong>Test site:</strong> <a href="{{ project.website_test }}">{{ project.website_test }}</a></p>
 				{% endif %}
+				<p><strong>Owner:</strong> {{ project.project_owner }}</p>
 			</div>
 			<div class="col-md-6 col-sm-6">
 				<p><strong>Project members:</strong></p>
